#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(no-define, no-define, no-define)
AM_INIT_AUTOMAKE(no-define, no-define, no-define)

# Checks for programs.
AM_PROG_CC_C_O

# Checks for libraries.
AC_CHECK_LIB([cunit], [CU_initialize_registry])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
